Fix image width to make responsive on smaller screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -178,6 +178,10 @@ figcaption {
   padding: 3%;
 }
 
+.blog-picture {
+  width: 100%;
+}
+
 /*Media queries for smartphones and tablets*/
 @media only screen and (max-width: 768px) {
   .blog-preview-card,
